hphp/hack/test/typecheck/yield_from_bad1.php.like_types.exp
File "yield_from_bad1.php", line 7, characters 3-16:
Invalid yield from (Typing[4110])
File "yield_from_bad1.php", line 7, characters 3-16:
Expected KeyedTraversable<[unresolved], [unresolved]> (result of function with 'yield' in the body)
File "yield_from_bad1.php", line 3, characters 15-42:
But got dynamic because it is an unenforceable type
